--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-useragent": "^2.8.0",
