--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "@vercel/analytics": "^1.1.1",
@@ -18,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
-    "sharp": "^0.33.1"
+    "sharp": "^0.33.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
