Fix the WebGL error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["drei", "easings", "tailwindcss", "zustand"]
+  "cSpell.words": [
+    "cssnano",
+    "drei",
+    "easings",
+    "frameloop",
+    "maath",
+    "tailwindcss",
+    "zustand"
+  ]
 }
