--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "@types/three": "^0.160.0",
     "@vercel/analytics": "^1.1.1",
+    "cssnano": "^6.0.3",
     "framer-motion": "^10.16.16",
+    "maath": "^0.10.7",
     "next": "14.0.4",
     "next-useragent": "^2.8.0",
     "react": "^18",
@@ -30,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "postcss-import": "^16.0.0",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.10",
     "tailwindcss": "^3.3.0",
