Fixes some ui issues and added profile photo view dialog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
   "cSpell.words": [
+    "animejs",
     "cssnano",
     "drei",
     "easings",
     "frameloop",
+    "headlessui",
+    "Heroicons",
     "maath",
     "tailwindcss",
     "zustand"
