--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "@types/animejs": "^3.1.12",
     "@types/three": "^0.160.0",
     "@vercel/analytics": "^1.1.1",
+    "animejs": "^3.2.2",
     "cssnano": "^6.0.3",
     "framer-motion": "^10.16.16",
     "maath": "^0.10.7",
