Added "Tool Box" section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,19 @@
   "cSpell.words": [
     "animejs",
     "cssnano",
+    "dbquery",
     "drei",
     "easings",
     "frameloop",
     "headlessui",
     "Heroicons",
     "maath",
+    "materializer",
+    "nextjs",
+    "nextui",
+    "stepzen",
     "tailwindcss",
+    "transpiles",
     "zustand"
   ]
 }
