--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-useragent": "^2.8.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.14.1",
     "react-type-animation": "^3.2.0",
     "sharp": "^0.33.1",
     "zustand": "^4.4.7"
